# bombfield

./: .gitignore  CMakeLists.txt  README.md
data/: presets_default.ini  presets_timer_test.ini
include/: BF_version.h  BF_version.h.in  Bombfield.h  Grid.h  Menu.h  MyUtils.h  VTS_table.h
src/: Bombfield.cpp  Grid.cpp  Menu.cpp
